force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/Sansan_CI__BizCard_Settings__c.object-meta.xml
<CustomObject>
    <label>名刺設定</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CI_BizCard設定</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>