force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Account_UseForSearch_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Account_UseForSearch_PostalCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>郵便番号</label>
    <type>Checkbox</type>
</CustomField>