force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Account_UseForSearch_State__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Account_UseForSearch_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>都道府県</label>
    <type>Checkbox</type>
</CustomField>