force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AccountOwner__c</fullName>
    <label>取引先新規登録時の所有者</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BizcardOwner</fullName>
                <label>名刺所有者</label>
            </value>
            <value>
                <fullName>Operater</fullName>
                <label>作業者</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>