force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AccountSearchConditionAccountName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AccountSearchConditionAccountName__c</fullName>
    <label>会社名</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>完全一致検索</label>
            </value>
            <value>
                <fullName>WithoutCorporateCapacity</fullName>
                <label>法人格を除いて完全一致検索</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>