force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AccountSearchConditionPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AccountSearchConditionPostalCode__c</fullName>
    <label>郵便番号</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <label>請求先郵便番号</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
                <label>納入先郵便番号</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>