force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Auto_BizcardExtractCondition__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Auto_BizcardExtractCondition__c</fullName>
    <label>自動関連づけ_名刺抽出条件</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>