force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Auto_IsActiveExistingBizCardSearch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Auto_IsActiveExistingBizCardSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ_既存名刺検索処理の有効化</label>
    <type>Checkbox</type>
</CustomField>