force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Auto_IsIncludeOnlyAutoLinkedBizcard__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Auto_IsIncludeOnlyAutoLinkedBizcard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ_既存名刺検索処理で自動関連づけ名刺のみを対象とする</label>
    <type>Checkbox</type>
</CustomField>