force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Auto_LeadRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Auto_LeadRecordTypeDeveloperName__c</fullName>
    <label>自動関連づけ_リード新規登録時のレコードタイプ(DevName)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>