force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoAccountNoMatchSetAccount__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoAccountNoMatchSetAccount__c</fullName>
    <label>自動関連づけ_取引先一致なし_取引先設定</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sansan_CI__AutoAccountNoMatchSetContact__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>新規作成</label>
            </value>
            <value>
                <fullName>Nothing</fullName>
                <label>何もしない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>