force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoContactMatchSetContact__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoContactMatchSetContact__c</fullName>
    <label>自動関連づけ_取引先責任者一致_取引先責任者設定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
                <default>true</default>
                <label>既存レコードを更新</label>
            </value>
            <value>
                <fullName>LinkTo</fullName>
                <label>名刺関連づけのみ</label>
            </value>
            <value>
                <fullName>Nothing</fullName>
                <label>何もしない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>