force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoLeadNoMatchSetLead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLeadNoMatchSetLead__c</fullName>
    <label>自動関連づけ_リード一致なし_リード設定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <label>新規作成</label>
            </value>
            <value>
                <fullName>Nothing</fullName>
                <label>何もしない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>