force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoLinkBatchSizeRetry__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkBatchSizeRetry__c</fullName>
    <label>自動関連づけ_バッチサイズ（リトライ）</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>