force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoLinkBatchTotalSizeRetry__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkBatchTotalSizeRetry__c</fullName>
    <label>自動関連づけ_バッチ合計処理件数（リトライ）</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>