force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoLinkTargetRunFourth__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkTargetRunFourth__c</fullName>
    <label>自動関連づけ実行対象4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>