force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoLinkTargetRunSecond__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkTargetRunSecond__c</fullName>
    <label>自動関連づけ実行対象2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>