force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutomaticBatchExeTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticBatchExeTime__c</fullName>
    <label>自動関連づけバッチ起動時間(毎時起動)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>