force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutomaticBatchExeTimeDaily__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticBatchExeTimeDaily__c</fullName>
    <label>自動関連づけバッチ起動時間(日次起動)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0:00</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1:00</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2:00</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3:00</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4:00</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5:00</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6:00</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7:00</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8:00</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9:00</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10:00</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11:00</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12:00</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13:00</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14:00</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15:00</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16:00</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17:00</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18:00</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19:00</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20:00</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21:00</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22:00</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23:00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>