force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutomaticPossibleFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticPossibleFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連係可能</label>
    <type>Checkbox</type>
</CustomField>