force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoPromotionLeadBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadBatchSize__c</fullName>
    <label>リード自動昇格_バッチサイズ</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>