force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__AutoPromotionLeadExtractCondition__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadExtractCondition__c</fullName>
    <label>リード自動昇格抽出条件</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>