force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__BusinessLocationFieldMapping__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__BusinessLocationFieldMapping__c</fullName>
    <label>拠点項目マッピング</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>