force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__CampaignMemberRegisterBatchTotalSize__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CampaignMemberRegisterBatchTotalSize__c</fullName>
    <label>キャンペーンメンバー自動登録_バッチ合計処理件数</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>