force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ContactAdditionalInfoProgressFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ContactAdditionalInfoProgressFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取責案内作成実施</label>
    <type>Checkbox</type>
</CustomField>