force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ContactSearchCondition_Email__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ContactSearchCondition_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール</label>
    <type>Checkbox</type>
</CustomField>