force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ConversionCompletedConFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ConversionCompletedConFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変換処理済(取引先責任者)</label>
    <type>Checkbox</type>
</CustomField>