force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ConversionCompletedFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ConversionCompletedFlg__c</fullName>
    <formula>Sansan_CI__ConversionCompletedLeadFlg__c &amp;&amp;  Sansan_CI__ConversionCompletedAccFlg__c &amp;&amp;  Sansan_CI__ConversionCompletedConFlg__c</formula>
    <label>変換処理済</label>
    <type>Checkbox</type>
</CustomField>