force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ConversionCompletedLeadFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ConversionCompletedLeadFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変換処理済(リード)</label>
    <type>Checkbox</type>
</CustomField>