force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__ConversionProgressFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ConversionProgressFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変換処理実施</label>
    <type>Checkbox</type>
</CustomField>