force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__DispPrefixLead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__DispPrefixLead__c</fullName>
    <label>画面表示接頭語_リード</label>
    <length>5</length>
    <type>Text</type>
</CustomField>