force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__EnrichedFields__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__EnrichedFields__c</fullName>
    <label>エンリッチ対象項目</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>