force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__EnrichmentFieldsDefinition__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__EnrichmentFieldsDefinition__c</fullName>
    <label>エンリッチ項目定義</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>