force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveAccountStatePartialMatchSearch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveAccountStatePartialMatchSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先_都道府県の部分一致検索</label>
    <type>Checkbox</type>
</CustomField>